hide toast from mobile view

--- a/src/components/atoms/Toast.astro
+++ b/src/components/atoms/Toast.astro
@@ -1,4 +1,4 @@
-<div id="toast" class="fixed top-10 left-1/2 -translate-x-1/2 py-3 px-8 bg-primary-black rounded-xl flex items-center shadow-lg transition-all duration-200">
+<div id="toast" class="fixed max-sm:hidden top-10 left-1/2 -translate-x-1/2 py-3 px-8 bg-primary-black rounded-xl flex items-center shadow-lg transition-all duration-200">
     <p class="flex items-center gap-2 text-primary-white text-body-m">To exit full screen press 'f' or <span class="border border-primary-white p-2 rounded-sm">esc</span></p>
 </div>
 
